--- a/methodology.html
+++ b/methodology.html
@@ -90,7 +90,31 @@
                 <div>
                     <h3 class="text-2xl font-bold text-gray-800 mb-2 pt-4 border-t mt-6">CompScore</h3>
                     <p>
-                        The CompScore is CEORater's proprietary letter-grade rating (A-F, Highest-Lowest), of a CEO's compensation efficiency. It measures a CEO’s total compensation cost per unit of Average Annual Total Stock Return generated during the CEO’s tenure. The lower the total compensation cost per unit of return, the higher the CompScore. 
+                        The CompScore is CEORater's proprietary letter-grade rating (A-F, Highest-Lowest), of a CEO's compensation efficiency. It measures a CEO's total compensation cost per unit of Average Annual Total Stock Return generated during the CEO's tenure. The lower the total compensation cost per unit of return, the higher the CompScore. 
+                    </p>
+                </div>
+
+                <div>
+                    <h3 class="text-2xl font-bold text-gray-800 mb-2 pt-4 border-t mt-6">CEORaterScore</h3>
+                    <p class="mb-3">
+                        The CEORaterScore is CEORater's flagship metric: a comprehensive 0-100 rating that combines both stock performance and compensation efficiency into a single, holistic measure of CEO effectiveness. This weighted composite score provides investors with a balanced evaluation of overall CEO value creation.
+                    </p>
+                    <p class="mb-3">
+                        <strong class="font-semibold text-gray-900">Calculation Method:</strong> CEORaterScore = (AlphaScore × 60%) + (CompScore × 40%)
+                    </p>
+                    <ul class="list-disc list-outside space-y-3 pl-5">
+                        <li>
+                            <strong class="font-semibold text-gray-900">60% Weight on AlphaScore:</strong> Reflects our core principle that stock performance relative to the market is the primary measure of CEO success. This ensures CEOs who generate superior shareholder returns are appropriately rewarded in the overall rating.
+                        </li>
+                        <li>
+                            <strong class="font-semibold text-gray-900">40% Weight on CompScore:</strong> Acknowledges that compensation efficiency is a critical component of shareholder value creation. CEOs who achieve strong returns while maintaining reasonable compensation levels score higher than those with excessive pay packages.
+                        </li>
+                        <li>
+                            <strong class="font-semibold text-gray-900">Conversion Method:</strong> CompScore letter grades are converted to numerical values (A=95, B=85, C=75, D=65, F=55) to enable mathematical calculation of the weighted average.
+                        </li>
+                    </ul>
+                    <p class="mt-3">
+                        <strong class="font-semibold text-gray-900">Interpretation:</strong> A CEORaterScore of 85+ indicates exceptional overall performance, 70-84 represents strong performance, 55-69 suggests average performance, and below 55 indicates underperformance relative to NASDAQ 100 peers.
                     </p>
                 </div>
 
