--- a/index.html
+++ b/index.html
@@ -43,24 +43,11 @@
 
   <link rel="preconnect" href="https://cdn.tailwindcss.com">
   <link rel="dns-prefetch" href="https://cdn.tailwindcss.com">
-  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="./dist/output.css">
   
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Orbitron:wght@700&display=swap" rel="stylesheet">
-
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          fontFamily: {
-            'sans': ['Inter', 'sans-serif'],
-            'orbitron': ['Orbitron', 'sans-serif'],
-          },
-        }
-      }
-    }
-  </script>
 
   <script>
     // Start fetching data immediately, before anything else loads
@@ -292,5 +279,6 @@
 
 </body>
 </html>
+
 
 
