--- a/methodology.html
+++ b/methodology.html
@@ -125,9 +125,11 @@
     <footer class="text-center mt-8 py-8 border-t text-sm text-gray-500">
         <p class="mb-2">
             <a href="/" class="text-blue-600 hover:underline">Home</a> | 
-            <a href="/privacy.html" class="text-blue-600 hover:underline">Privacy Policy</a>
+            <a href="/privacy.html" class="text-blue-600 hover:underline">Privacy Policy</a> |
+            <a href="/support.html" class="text-blue-600 hover:underline">Support</a> |
         </p>
         <p>CEORater 2025. A TEK2day Holdings company.</p>
     </footer>
 </body>
 </html>
+
