--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         <p class="mb-2">
             <a href="/methodology.html" class="text-blue-600 hover:underline">Our Methodology</a> | 
             <a href="/privacy.html" class="text-blue-600 hover:underline">Privacy Policy</a> |
-            <a href="/privacy.html" class="text-blue-600 hover:underline">Support</a> 
+            <a href="/support.html" class="text-blue-600 hover:underline">Support</a> 
         </p>
         <p>CEORater 2025. A TEK2day Holdings company.</p>
     </footer>
@@ -279,3 +279,4 @@
 
 </body>
 </html>
+
