--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   
   <title>CEORater</title>
 
-  <link rel="preconnect" href="https://get-ceos-test-847610982404.us-east4.run.app" crossorigin>
-  <link rel="dns-prefetch" href="https://get-ceos-test-847610982404.us-east4.run.app">
+  <link rel="preconnect" href="https://ceorater-backend-697273542938.us-south1.run.app" crossorigin>
+  <link rel="dns-prefetch" href="https://ceorater-backend-697273542938.us-south1.run.app">
   
   <!-- Preload favicon -->
   <link rel="preload" href="favicon-32x32.png" as="image" type="image/png">
@@ -52,7 +52,7 @@
   
   <script>
     // Start fetching data immediately, before anything else loads
-    window.dataPromise = fetch('https://get-ceos-test-847610982404.us-east4.run.app/api/data')
+    window.dataPromise = fetch('https://ceorater-backend-697273542938.us-south1.run.app/api/data')
       .then(r => r.json())
       .catch(err => console.error('Early fetch failed:', err));
   </script>
