--- a/index.html
+++ b/index.html
@@ -261,7 +261,8 @@
     <footer class="text-center mt-8 py-8 border-t text-sm text-gray-500">
         <p class="mb-2">
             <a href="/methodology.html" class="text-blue-600 hover:underline">Our Methodology</a> | 
-            <a href="/privacy.html" class="text-blue-600 hover:underline">Privacy Policy</a>
+            <a href="/privacy.html" class="text-blue-600 hover:underline">Privacy Policy</a> |
+            <a href="/support.html" class="text-blue-600 hover:underline">Support</a>
         </p>
         <p>CEORater 2025. A TEK2day Holdings company.</p>
     </footer>
@@ -351,3 +352,4 @@
 
 </body>
 </html>
+
