--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 <body class="bg-gray-100 text-gray-800 font-sans">
   <!-- App shell applies safe-area padding globally to main screens -->
   <div class="app-shell">
-    <header class="bg-white shadow-md sticky top-0 z-30">
+    <header id="appHeader" class="bg-white shadow-md sticky top-0 z-30">
       <div class="container mx-auto px-4">
         <div class="flex justify-between items-center flex-wrap gap-y-3 py-3">
           <div class="flex items-center gap-x-3">
@@ -386,3 +386,4 @@
   </script>
 </body>
 </html>
+
