--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
   <title>CEORater</title>
 
-  <link rel="preconnect" href="https://ceorater-backend-697273542938.us-south1.run.app" crossorigin>
-  <link rel="dns-prefetch" href="https://ceorater-backend-697273542938.us-south1.run.app">
+  <link rel="preconnect" href="https://get-ceos-test-847610982404.us-east4.run.app" crossorigin>
+  <link rel="dns-prefetch" href="https://get-ceos-test-847610982404.us-east4.run.app">
 
   <!-- Preload favicon -->
   <link rel="preload" href="favicon-32x32.png" as="image" type="image/png">
@@ -51,7 +51,7 @@
 
   <script>
     // Start fetching data immediately, before anything else loads
-    window.dataPromise = fetch('https://ceorater-backend-697273542938.us-south1.run.app/api/data')
+    window.dataPromise = fetch('https://get-ceos-test-847610982404.us-east4.run.app/api/data')
       .then(r => r.json())
       .catch(err => console.error('Early fetch failed:', err));
   </script>
@@ -360,6 +360,14 @@
     </div>
   </div>
 
+  <!-- Force Firebase to use web (not Cordova) inside Capacitor -->
+  <script>
+    if (window.Capacitor && window.cordova) {
+      // Prevent Firebase Auth from taking the Cordova branch
+      try { delete window.cordova; } catch (e) { window.cordova = undefined; }
+    }
+  </script>
+  
   <!-- Firebase -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.22.0/firebase-app-compat.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.22.0/firebase-auth-compat.min.js"></script>
@@ -386,4 +394,3 @@
   </script>
 </body>
 </html>
-
