--- a/index.html
+++ b/index.html
@@ -361,12 +361,7 @@
   </div>
 
   <!-- Force Firebase to use web (not Cordova) inside Capacitor -->
-  <script>
-    if (window.Capacitor && window.cordova) {
-      // Prevent Firebase Auth from taking the Cordova branch
-      try { delete window.cordova; } catch (e) { window.cordova = undefined; }
-    }
-  </script>
+  <script>window.cordova = undefined; window.PhoneGap = undefined; window.phonegap = undefined;</script>
   
   <!-- Firebase -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.22.0/firebase-app-compat.min.js"></script>
@@ -394,3 +389,4 @@
   </script>
 </body>
 </html>
+
