--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <title>CEORater</title>
 
   <link rel="preconnect" href="https://ceorater-backend-697273542938.us-south1.run.app" crossorigin>
+  <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
+
   <link rel="dns-prefetch" href="https://ceorater-backend-697273542938.us-south1.run.app">
 
   <!-- Preload favicon -->
@@ -361,9 +363,9 @@
   </div>
 
   <!-- Firebase -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.22.0/firebase-app-compat.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.22.0/firebase-auth-compat.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.22.0/firebase-firestore-compat.min.js"></script>
+  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.22.0/firebase-app-compat.min.js"></script>
+  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.22.0/firebase-auth-compat.min.js"></script>
+  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.22.0/firebase-firestore-compat.min.js"></script>
 
   <script src="firebase-config.js"></script>
   <script type="module" src="script.js"></script>
@@ -386,5 +388,6 @@
   </script>
 </body>
 </html>
+
 
 
