--- a/index.html
+++ b/index.html
@@ -46,7 +46,14 @@
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Orbitron:wght@700&display=swap" rel="stylesheet">
+  <!-- make Google Fonts non-blocking -->
+  <link rel="preload"
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Orbitron:wght@700&display=swap"
+        as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript>
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Orbitron:wght@700&display=swap">
+  </noscript>
 
   <!-- Tailwind (compiled) -->
   <link rel="stylesheet" href="./dist/output.css" />
@@ -367,7 +374,7 @@
   <script defer src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.22.0/firebase-auth-compat.min.js"></script>
   <script defer src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.22.0/firebase-firestore-compat.min.js"></script>
 
-  <script src="firebase-config.js"></script>
+  <script defer src="firebase-config.js"></script>
   <script type="module" src="script.js"></script>
 
   <!-- Service Worker -->
@@ -388,6 +395,3 @@
   </script>
 </body>
 </html>
-
-
-
