--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
   <title>CEORater</title>
 
+  <link rel="canonical" href="https://ceorater.com/">
+
   <link rel="preconnect" href="https://ceorater-backend-697273542938.us-south1.run.app" crossorigin>
   <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
 
@@ -395,3 +397,4 @@
   </script>
 </body>
 </html>
+
