--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
 
   <title>CEORater</title>
 
-  <link rel="preconnect" href="https://get-ceos-test-847610982404.us-east4.run.app" crossorigin>
-  <link rel="dns-prefetch" href="https://get-ceos-test-847610982404.us-east4.run.app">
+  <link rel="canonical" href="https://ceorater.com/">
+
+  <link rel="preconnect" href="https://ceorater-backend-697273542938.us-south1.run.app" crossorigin>
+  <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
+
+  <link rel="dns-prefetch" href="https://ceorater-backend-697273542938.us-south1.run.app">
 
   <!-- Preload favicon -->
   <link rel="preload" href="favicon-32x32.png" as="image" type="image/png">
@@ -44,14 +48,21 @@
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Orbitron:wght@700&display=swap" rel="stylesheet">
+  <!-- make Google Fonts non-blocking -->
+  <link rel="preload"
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Orbitron:wght@700&display=swap"
+        as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript>
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Orbitron:wght@700&display=swap">
+  </noscript>
 
   <!-- Tailwind (compiled) -->
   <link rel="stylesheet" href="./dist/output.css" />
 
   <script>
     // Start fetching data immediately, before anything else loads
-    window.dataPromise = fetch('https://get-ceos-test-847610982404.us-east4.run.app/api/data')
+    window.dataPromise = fetch('https://ceorater-backend-697273542938.us-south1.run.app/api/data')
       .then(r => r.json())
       .catch(err => console.error('Early fetch failed:', err));
   </script>
@@ -360,15 +371,12 @@
     </div>
   </div>
 
-  <!-- Force Firebase to use web (not Cordova) inside Capacitor -->
-  <script>window.cordova = undefined; window.PhoneGap = undefined; window.phonegap = undefined;</script>
-  
   <!-- Firebase -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.22.0/firebase-app-compat.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.22.0/firebase-auth-compat.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.22.0/firebase-firestore-compat.min.js"></script>
+  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.22.0/firebase-app-compat.min.js"></script>
+  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.22.0/firebase-auth-compat.min.js"></script>
+  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.22.0/firebase-firestore-compat.min.js"></script>
 
-  <script src="firebase-config.js"></script>
+  <script defer src="firebase-config.js"></script>
   <script type="module" src="script.js"></script>
 
   <!-- Service Worker -->
@@ -389,4 +397,3 @@
   </script>
 </body>
 </html>
-
