--- a/index.html
+++ b/index.html
@@ -377,41 +377,23 @@
   <script defer src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.22.0/firebase-firestore-compat.min.js"></script>
 
   <script defer src="firebase-config.js"></script>
-  <!-- Firebase init (compat) -->
+  <script type="module" src="script.js"></script>
+
+  <!-- Service Worker (disabled inside Capacitor app) -->
   <script>
     (function() {
-      try {
-        if (!window.firebase) { console.error('Firebase not loaded'); return; }
-        if (!window.firebaseConfig) { console.error('firebaseConfig missing'); return; }
-        if (firebase.apps && firebase.apps.length) return; // already initialized
-        firebase.initializeApp(window.firebaseConfig);
-        // Expose for your app code
-        window.auth = firebase.auth();
-        window.db   = firebase.firestore();
-        console.log('Firebase initialized');
-      } catch (e) {
-        console.error('Firebase init error:', e);
+      const isCapacitor = !!(window.Capacitor && typeof window.Capacitor.getPlatform === 'function' && window.Capacitor.getPlatform() !== 'web');
+      if (!isCapacitor && 'serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+          (window.requestIdleCallback || function(cb){setTimeout(cb, 0);})(() => {
+            navigator.serviceWorker.register('service-worker.js') // relative path works under capacitor://localhost when PWA is used in the browser
+              .then(reg => console.log('SW registration ok:', reg.scope))
+              .catch(err => console.log('SW registration failed:', err));
+          });
+        });
       }
     })();
   </script>
-
-  <script type="module" src="script.js"></script>
-
-  <!-- Service Worker -->
-  <script>
-    if ('serviceWorker' in navigator) {
-      window.addEventListener('load', () => {
-        requestIdleCallback(() => {
-          navigator.serviceWorker.register('/service-worker.js')
-            .then(registration => {
-              console.log('ServiceWorker registration successful with scope: ', registration.scope);
-            })
-            .catch(error => {
-              console.log('ServiceWorker registration failed: ', error);
-            });
-        });
-      });
-    }
-  </script>
 </body>
 </html>
+
