--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
 
   <link rel="dns-prefetch" href="https://get-ceos-test-847610982404.us-east4.run.app">
 
-  <!-- OpenGraph tags -->
+  <!-- Preload favicon -->
+  <link rel="preload" href="favicon-32x32.png" as="image" type="image/png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
+  <link rel="manifest" href="manifest.json">
+
+  <meta name="theme-color" content="#4f46e5">
+
   <meta property="og:title" content="CEORater" />
   <meta property="og:description" content="NASDAQ 100 CEO Performance & Compensation Analytics" />
   <meta property="og:image" content="https://www.ceorater.com/android-chrome-512x512.png" />
@@ -35,13 +43,56 @@
   <!-- iOS Splash (optional) -->
   <link rel="apple-touch-startup-image" href="apple-touch-icon.png" />
 
-  <!-- Prevent iOS Safari from auto-detecting phone numbers -->
-  <meta name="format-detection" content="telephone=no" />
+  <style>
+    /* Utility for “safe areas” (iOS notch) */
+    .px-safe { padding-left: max(1rem, env(safe-area-inset-left)); padding-right: max(1rem, env(safe-area-inset-right)); }
+    .top-safe { padding-top: env(safe-area-inset-top); }
+    .bottom-safe { padding-bottom: env(safe-area-inset-bottom); }
+
+    /* Simple spinner */
+    #loading-spinner {
+      width: 40px; height: 40px; border: 3px solid #e5e7eb; border-top-color: #3b82f6; border-radius: 50%;
+      animation: spin 1s linear infinite;
+    }
+    @keyframes spin { to { transform: rotate(360deg); } }
+
+    /* Desktop layout for the stat card section */
+    @media (min-width: 1024px) {
+      #statCardContainer {
+        display: grid;
+        grid-template-columns: 1fr auto;
+        gap: 1.5rem;
+        align-items: stretch;
+      }
+      #statCardContainer .right-stats {
+        width: 320px;
+        display: grid;
+        grid-template-rows: 1fr 1fr;
+        gap: 1rem;
+      }
+      #statCardContainer .left-stats {
+        display: grid;
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+        gap: 1rem;
+      }
+    }
+
+    /* Mobile stacking */
+    @media (max-width: 1023px) {
+      #statCardContainer { display: grid; gap: 1rem; }
+      #statCardContainer .left-stats,
+      #statCardContainer .right-stats { display: grid; gap: 1rem; }
+    }
+
+    /* Generic modal class */
+    .modal { backdrop-filter: saturate(110%) blur(2px); }
+    .watchlist-tab.active { background: #e5e7eb; }
+  </style>
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <!-- make Google Fonts non-blocking -->
+  <!-- load non-blocking -->
   <link rel="preload"
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Orbitron:wght@700&display=swap"
         as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -53,24 +104,9 @@
   <!-- Tailwind (compiled) -->
   <link rel="preload" href="output.css" as="style" />
   <link rel="stylesheet" href="output.css">
-
-  <!-- Favicons -->
-  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-  <link rel="manifest" href="site.webmanifest">
-
-  <!-- Theme color for PWA status bar on supported browsers -->
-  <meta name="theme-color" content="#0b1220" />
-
-  <!-- Defer non-critical scripts -->
-  <script>
-    // Avoid blocking on JS parsing; we’ll use modules at the end of body.
-    window.__ceorater = {};
-  </script>
 </head>
+
 <body class="bg-slate-50 text-slate-900 min-h-screen flex flex-col">
-  <!-- Safe-area container for iOS notch/rounded corners -->
   <div class="px-safe">
     <!-- Top Announcement Bar -->
     <div id="announcementBar" class="hidden bg-blue-50 text-blue-900">
@@ -123,8 +159,7 @@
             <div>
               <label class="text-xs uppercase tracking-wider text-gray-500">Search</label>
               <input id="searchInput" type="text" placeholder="Search CEOs, companies, or tickers"
-                     class="mt-1 w-full px-3 py-2 border rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
-              />
+                     class="mt-1 w-full px-3 py-2 border rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" />
             </div>
 
             <div>
@@ -158,24 +193,22 @@
       </div>
     </header>
 
-    <!-- Metrics Row -->
-    <section class="container mx-auto px-4 py-4 sm:py-6">
-      <div class="grid grid-cols-1 lg:grid-cols-[1fr_auto] gap-4 items-stretch">
-        <div class="bg-gradient-to-br from-white to-blue-50 rounded-xl shadow-lg p-4 sm:p-6">
-          <div class="grid grid-cols-2 sm:grid-cols-4 gap-3 sm:gap-4">
-            <div class="bg-white p-4 rounded-lg shadow text-center stat-card">
-              <h3 class="text-sm font-medium text-gray-500">Median Tenure</h3>
-              <p id="medianTenureStat" class="text-2xl font-bold text-gray-900 mt-1">--</p>
-            </div>
+    <div class="container mx-auto p-4 md:p-8">
+      <div id="statCardContainer" class="mb-6">
+        <div class="left-stats">
+          <div class="bg-white p-4 rounded-lg shadow text-center stat-card">
+            <h3 class="text-sm font-medium text-gray-500">Avg. Founder CEORaterScore</h3>
+            <p id="medianTsrStat" class="text-2xl font-bold mt-1 font-orbitron text-blue-600">--</p>
+          </div>
 
-            <div class="bg-white p-4 rounded-lg shadow text-center stat-card">
-              <h3 class="text-sm font-medium text-gray-500">Median Alpha Score</h3>
-              <p id="medianAlphaScoreStat" class="text-2xl font-bold text-gray-900 mt-1">--</p>
-            </div>
+          <div class="bg-white p-4 rounded-lg shadow text-center stat-card">
+            <h3 class="text-sm font-medium text-gray-500">Avg. Founder AlphaScore</h3>
+            <p id="avgFounderAlphaScoreStat" class="text-2xl font-bold mt-1 font-orbitron text-blue-600">--</p>
+          </div>
 
-            <div class="bg-white p-4 rounded-lg shadow text-center stat-card">
-              <h3 class="text-sm font-medium text-gray-500">Median CEO Rater Score</h3>
-              <p id="medianCeoRaterScoreStat" class="text-5xl font-orbitron font-black text-slate-800 mb-2">--</p>
+          <div class="bg-white p-4 rounded-lg shadow text-center stat-card">
+            <h3 class="text-sm font-medium text-gray-500">Median CEORaterScore</h3>
+            <p id="medianCeoRaterScoreStat" class="text-5xl font-orbitron font-black text-slate-800 mb-2">--</p>
             <div class="text-sm text-slate-600 font-medium">60% Alpha • 40% Comp</div>
             <div class="text-xs text-slate-500 mt-1">Comprehensive CEO Performance Rating</div>
           </div>
@@ -193,7 +226,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </div>
 
     <!-- Main Content -->
     <main class="container mx-auto px-4 flex-1" role="main">
@@ -217,58 +250,58 @@
     <!-- Detail Modal -->
     <div id="detailModal" class="hidden fixed inset-0 bg-black bg-opacity-50 modal z-50 flex items-center justify-center p-4">
       <div class="bg-white rounded-xl shadow-2xl w-full max-w-4xl max-h-[90vh] overflow-y-auto relative">
-      <div id="modalHeader" class="pb-4 border-b"></div>
-      <div id="modalBody" class="py-4"></div>
-      <div id="modalFooter" class="pt-4 border-t"></div>
-      <button id="closeDetailModal" class="absolute top-4 right-4 text-gray-400 hover:text-gray-600">
-        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
-        </svg>
-      </button>
-    </div>
-  </div>
-
-  <!-- COMPARISON TRAY (fixed bottom; CSS adds safe bottom padding) -->
-  <div id="comparisonTray" class="hidden fixed bottom-0 left-0 right-0 bg-white shadow-2xl border-t border-gray-200 z-40">
-    <div class="container mx-auto p-3 text-center sm:p-4 sm:text-left sm:flex sm:justify-between sm:items-center">
-      <div class="flex items-center justify-center sm:justify-start space-x-3">
-        <span id="comparisonTitle" class="font-semibold text-gray-700">Compare (0/3):</span>
-        <div id="trayTickers" class="flex items-center space-x-2"></div>
-      </div>
-      <button id="compareNowBtn" class="w-full mt-2 sm:w-auto sm:mt-0 px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition">Compare Now →</button>
-    </div>
-  </div>
-
-  <!-- COMPARISON MODAL -->
-  <div id="comparisonModal" class="hidden fixed inset-0 bg-black bg-opacity-50 modal z-50 flex items-center justify-center p-4">
-    <div class="bg-white rounded-xl shadow-2xl w-full max-w-6xl max-h-[90vh] flex flex-col">
-      <div class="p-4 border-b flex justify-between items-center flex-shrink-0">
-        <div class="flex items-center gap-x-3">
-          <h1 class="text-2xl font-orbitron italic font-bold text-blue-600">CEORater</h1>
-          <span class="text-2xl font-light text-gray-300">|</span>
-          <h2 class="text-xl font-bold text-gray-800">CEO Comparison</h2>
-        </div>
-        <button id="closeComparisonModal" class="text-gray-400 hover:text-gray-600">
+        <button id="closeDetailModal" class="absolute top-4 right-4 text-gray-400 hover:text-gray-600">
           <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
           </svg>
         </button>
+        <div id="modalHeader" class="pb-4 border-b"></div>
+        <div id="modalBody" class="py-4"></div>
+        <div id="modalFooter" class="pt-4 border-t"></div>
       </div>
-      <div id="comparisonContent" class="p-4 overflow-y-auto flex-1"></div>
     </div>
-  </div>
 
-  <!-- Footer -->
-  <footer class="mt-12 py-8 text-center text-xs text-gray-500">
-    <div class="container mx-auto px-4">
-      <p>&copy; <span id="year"></span> CEORater. All rights reserved.</p>
-      <p class="mt-1">
-        <a href="privacy.html" class="underline hover:text-gray-700">Privacy Policy</a> •
-        <a href="terms.html" class="underline hover:text-gray-700">Terms</a>
-      </p>
+    <!-- Comparison Tray -->
+    <div id="comparisonTray" class="hidden fixed bottom-0 left-0 right-0 bg-white shadow-2xl border-t border-gray-200 z-40">
+      <div class="container mx-auto p-3 text-center sm:p-4 sm:text-left sm:flex sm:justify-between sm:items-center">
+        <div class="flex items-center justify-center sm:justify-start space-x-3">
+          <span id="comparisonTitle" class="font-semibold text-gray-700">Compare (0/3):</span>
+          <div id="trayTickers" class="flex items-center space-x-2"></div>
+        </div>
+        <button id="compareNowBtn" class="w-full mt-2 sm:w-auto sm:mt-0 px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition">Compare Now →</button>
+      </div>
     </div>
-  </footer>
-</div>
+
+    <!-- Comparison Modal -->
+    <div id="comparisonModal" class="hidden fixed inset-0 bg-black bg-opacity-50 modal z-50 flex items-center justify-center p-4">
+      <div class="bg-white rounded-xl shadow-2xl w-full max-w-6xl max-h-[90vh] flex flex-col">
+        <div class="p-4 border-b flex justify-between items-center flex-shrink-0">
+          <div class="flex items-center gap-x-3">
+            <h1 class="text-2xl font-orbitron italic font-bold text-blue-600">CEORater</h1>
+            <span class="text-2xl font-light text-gray-300">|</span>
+            <h2 class="text-xl font-bold text-gray-800">CEO Comparison</h2>
+          </div>
+          <button id="closeComparisonModal" class="text-gray-400 hover:text-gray-600">
+            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+            </svg>
+          </button>
+        </div>
+        <div id="comparisonContent" class="p-4 overflow-y-auto flex-1"></div>
+      </div>
+    </div>
+
+    <!-- Footer -->
+    <footer class="mt-12 py-8 text-center text-xs text-gray-500">
+      <div class="container mx-auto px-4">
+        <p>&copy; <span id="year"></span> CEORater. All rights reserved.</p>
+        <p class="mt-1">
+          <a href="privacy.html" class="underline hover:text-gray-700">Privacy Policy</a> •
+          <a href="terms.html" class="underline hover:text-gray-700">Terms</a>
+        </p>
+      </div>
+    </footer>
+  </div>
 
   <!-- Login Modal -->
   <div id="loginModal" class="hidden fixed inset-0 bg-black bg-opacity-50 z-50 flex items-center justify-center p-4">
