--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
           <nav class="flex items-center gap-2 sm:gap-3">
             <span id="userEmail" class="hidden md:inline-block text-sm text-gray-600 px-3 py-1"></span>
             <button id="loginBtn" class="px-3 py-1.5 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition text-sm">Log in</button>
+            <button id="deleteAccountBtn" class="hidden px-3 py-1.5 text-red-600 border border-red-300 rounded-lg hover:bg-red-50 transition text-sm">Delete Account</button>
             <button id="logoutBtn" class="hidden px-3 py-1.5 border rounded-lg hover:bg-gray-100 transition text-sm">Log out</button>
           </nav>
         </div>
@@ -201,10 +202,10 @@
             <option value="compensation-asc">Compensation ↑</option>
             <option value="tenure-desc">Tenure ↓</option>
             <option value="tenure-asc">Tenure ↑</option>
-            <option value="ceo-asc">CEO A—Z</option>
-            <option value="ceo-desc">CEO Z—A</option>
-            <option value="company-asc">Company A—Z</option>
-            <option value="company-desc">Company Z—A</option>
+            <option value="ceo-asc">CEO A–Z</option>
+            <option value="ceo-desc">CEO Z–A</option>
+            <option value="company-asc">Company A–Z</option>
+            <option value="company-desc">Company Z–A</option>
           </select>
           <select id="industryFilter" class="w-full px-4 py-2 text-sm border border-gray-300 rounded-lg bg-white focus:outline-none focus:ring-2 focus:ring-blue-500 transition-shadow">
             <option value="">All Industries</option>
@@ -316,6 +317,47 @@
       </div>
 
       <button id="closeLoginModalBtn" class="absolute top-4 right-4 text-gray-400 hover:text-gray-600">
+        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+        </svg>
+      </button>
+    </div>
+  </div>
+
+  <!-- ACCOUNT DELETION MODAL -->
+  <div id="deleteAccountModal" class="hidden fixed inset-0 bg-black bg-opacity-50 modal z-50 flex items-center justify-center p-4">
+    <div class="bg-white rounded-lg p-6 w-full max-w-md relative">
+      <h2 class="text-xl font-bold mb-4 text-red-600">Delete Account</h2>
+      <div class="mb-4 p-3 bg-red-50 border border-red-200 rounded-lg">
+        <p class="text-sm text-red-800 font-semibold mb-2">⚠️ Warning: This action cannot be undone</p>
+        <p class="text-sm text-gray-700">Deleting your account will:</p>
+        <ul class="text-sm text-gray-700 mt-1 ml-4 list-disc">
+          <li>Permanently remove your watchlist</li>
+          <li>Delete all your saved preferences</li>
+          <li>Remove your account credentials</li>
+        </ul>
+      </div>
+      
+      <div class="space-y-4">
+        <div id="deletePasswordSection" class="hidden">
+          <label for="deletePasswordInput" class="block text-sm font-medium text-gray-700 mb-1">
+            Enter your password to confirm:
+          </label>
+          <input id="deletePasswordInput" type="password" placeholder="Password" 
+                 class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-red-500" />
+        </div>
+
+        <div id="deleteOAuthSection" class="hidden">
+          <p class="text-sm text-gray-600">You will need to re-authenticate with your provider to confirm account deletion.</p>
+        </div>
+        
+        <div class="flex gap-2">
+          <button id="cancelDeleteBtn" class="flex-1 px-4 py-3 border border-gray-300 rounded-lg hover:bg-gray-50 transition">Cancel</button>
+          <button id="confirmDeleteBtn" class="flex-1 px-4 py-3 bg-red-600 text-white rounded-lg hover:bg-red-700 transition">Delete My Account</button>
+        </div>
+      </div>
+
+      <button id="closeDeleteModalBtn" class="absolute top-4 right-4 text-gray-400 hover:text-gray-600">
         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
         </svg>
