--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
         
         <div class="flex gap-2">
           <button id="cancelDeleteBtn" class="flex-1 px-4 py-3 border border-gray-300 rounded-lg hover:bg-gray-50 transition">Cancel</button>
-          <button id="confirmDeleteBtn" class="flex-1 px-4 py-3 bg-red-600 text-white rounded-lg hover:bg-red-700 transition">Delete My Account</button>
+          <button id="confirmDeleteBtn" class="flex-1 px-4 py-3 bg-red-600 text-white rounded-lg hover:bg-red-700 transition font-semibold">Delete My Account</button>
         </div>
       </div>
 
