--- a/profile.html
+++ b/profile.html
@@ -203,8 +203,8 @@
         <section id="privacy" class="settings-section hidden">
           <div class="bg-white rounded-lg shadow-sm border border-gray-200 overflow-hidden">
             <div class="px-6 py-4 border-b border-gray-200">
-              <h2 class="text-lg font-semibold text-gray-900">Privacy Settings</h2>
-              <p class="text-sm text-gray-600">Control your privacy and data sharing preferences.</p>
+              <h2 class="text-lg font-semibold text-gray-900">Privacy & Terms</h2>
+              <p class="text-sm text-gray-600">Control your privacy settings and view our policies.</p>
             </div>
             <div class="p-6 space-y-6">
               <div>
@@ -247,69 +247,26 @@
                 </div>
               </div>
 
-              <div class="pt-4">
-                <button class="px-4 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700 transition">
-                  Save Privacy Settings
-                </button>
-              </div>
-            </div>
-          </div>
-        </section>
-
-        <!-- Data Export Section -->
-        <section id="data" class="settings-section hidden">
-          <div class="bg-white rounded-lg shadow-sm border border-gray-200 overflow-hidden">
-            <div class="px-6 py-4 border-b border-gray-200">
-              <h2 class="text-lg font-semibold text-gray-900">Data Export</h2>
-              <p class="text-sm text-gray-600">Download your personal data and activity history.</p>
-            </div>
-            <div class="p-6 space-y-6">
-              <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-                <div class="border border-gray-200 rounded-lg p-4">
-                  <div class="flex items-center space-x-3 mb-3">
-                    <svg class="w-8 h-8 text-green-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"></path>
-                    </svg>
-                    <div>
-                      <h3 class="font-medium text-gray-900">Watchlist Data</h3>
-                      <p class="text-sm text-gray-600">Your saved CEOs and preferences</p>
-                    </div>
-                  </div>
-                  <button class="w-full px-4 py-2 bg-green-600 text-white rounded-md hover:bg-green-700 transition">
-                    Download CSV
-                  </button>
-                </div>
-
-                <div class="border border-gray-200 rounded-lg p-4">
-                  <div class="flex items-center space-x-3 mb-3">
-                    <svg class="w-8 h-8 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 4V2a1 1 0 011-1h8a1 1 0 011 1v2M7 4a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2V6a2 2 0 00-2-2H7zM9 12h6m-6 4h6"></path>
-                    </svg>
-                    <div>
-                      <h3 class="font-medium text-gray-900">Account Information</h3>
-                      <p class="text-sm text-gray-600">Profile and settings data</p>
-                    </div>
-                  </div>
-                  <button class="w-full px-4 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700 transition">
-                    Download JSON
-                  </button>
-                </div>
-              </div>
-
               <div class="bg-blue-50 border border-blue-200 rounded-lg p-4">
                 <div class="flex items-start space-x-3">
                   <svg class="w-5 h-5 text-blue-600 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
                   </svg>
                   <div>
-                    <h4 class="font-medium text-blue-900">Complete Data Export</h4>
+                    <h4 class="font-medium text-blue-900">Our Policies</h4>
                     <p class="text-sm text-blue-700 mt-1">
-                      For a complete export of all your data including activity history, 
-                      <button class="underline hover:no-underline">contact our support team</button>. 
-                      We'll provide a comprehensive data package within 30 days.
+                      Review our 
+                      <a href="https://www.ceorater.com/privacy.html" target="_blank" class="underline hover:no-underline">Privacy Policy</a>
+                      to understand how we collect, use, and protect your data.
                     </p>
                   </div>
                 </div>
+              </div>
+
+              <div class="pt-4">
+                <button class="px-4 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700 transition">
+                  Save Privacy Settings
+                </button>
               </div>
             </div>
           </div>
